# server/src/authentication.ts
@@ -1,21 +1,11 @@
-import * as express from "express";
-import * as jwt from "jsonwebtoken";
-import config  from "./config";
-
-export class Reseller {
-    resellerId: string
-
-}
-
-export class HotspotPointOfSale {
-    username: string;
-    firstName:string;
-    lastName:string;
-}
-
-export type AuthenticatedResellerRequest = Request & { user: Reseller };
-export type AuthenticatedHotspotRequest = Request & { user: HotspotPointOfSale };
-
+import { default as express, Request } from "express";
+import jwt from "jsonwebtoken";
+import config from "./config";
+import { ErrorCodes } from "./ord/helpers/errorMessages";
+export type AuthenticatedUser = { id: string, wallets: string[] };
+export type AuthenticatedRequest = Request & { user: AuthenticatedUser };
+// export type AuthenticatedHotspotRequest = Request & { user: HotspotPointOfSale };
+export class KnownError extends Error { }
 export function expressAuthentication(
     request: express.Request,
     securityName: string,
@@ -29,8 +19,9 @@ export function expressAuthentication(
 
         return new Promise((resolve, reject) => {
             if (!token) {
-                reject(new Error("No token provided"));
+                reject(new KnownError(ErrorCodes.NO_TOKEN));
             }
+            const secret = config.JWT_SIGNING_SECRET;
             jwt.verify(token, config.JWT_SIGNING_SECRET, function (err: any, decoded: any) {
                 if (err) {
                     reject(err);
@@ -44,17 +35,17 @@ export function expressAuthentication(
     if (securityName === "api_key") {
         let token;
         if (request.query && request.query.access_token) {
-          token = request.query.access_token;
+            token = request.query.access_token;
         }
-    
+
         if (token === "abc123456") {
-          return Promise.resolve({
-            id: 1,
-            name: "Ironman",
-          });
+            return Promise.resolve({
+                id: 1,
+                name: "Ironman",
+            });
         } else {
-          return Promise.reject();
+            return Promise.reject();
         }
-      }
+    }
 }
 
