# server/src/controllers/authentication.controller.ts
@@ -1,4 +1,9 @@
+import { randomUUID } from "crypto";
 import { Tags, Route, Security, Controller, Post, Body } from "tsoa";
+import config from "../config";
+import { ErrorCodes } from "../ord/helpers/errorMessages";
+import { OrdBridge } from "../ord/ordBridge";
+import { loadUserData } from "../tooling/utils";
 
 @Tags("authentication")
 @Route("/authentication")
@@ -6,21 +11,51 @@ import { Tags, Route, Security, Controller, Post, Body } from "tsoa";
 export class AuthenticationController extends Controller {
     @Post("register")
     async register(
-        @Body() registerInfo: {
+        @Body() body: {
             username: string,
             password: string
         }
     ) {
-        throw "not implemented";
+        try {
+            const user = await config.prisma.users.findFirst({ where: { username: body.username } });
+            if (user) {
+                this.setStatus(400);
+                return ErrorCodes.USER_NAME_UNAVAILABLE as ErrorCodes
+            } else {
+                const walletId = randomUUID();
+                const wallet = await OrdBridge.create(walletId);
+                const newUser = await config.prisma.users.create({
+                    data: {
+                        username: body.username,
+                        passowrd: body.password,
+                        wallet: {
+                            create: {
+                                menemonic: wallet[0].mnemonic,
+                                id: walletId,
+                                lastKnownBalance: 0
+                            }
+                        }
+                    }
+                });
+                return { mnemonic: wallet[0].mnemonic, ...(await loadUserData(newUser.id)) };
+            }
+        } catch (e) {
+
+        }
     }
 
     @Post("login")
     async login(
-        @Body() loginInfo: {
+        @Body() body: {
             username: string,
             password: string
         }
     ) {
-        throw "not implemented";
+        const user = await config.prisma.users.findFirst({ where: { username: body.username } });
+        if (!user) {
+            this.setStatus(400);
+            return ErrorCodes.BAD_LOGIN_ATTEMPT as ErrorCodes
+        }
+        return await loadUserData(user.id);
     }
 }
