# server/src/ord/helpers/BTCTransactions.ts
@@ -1,5 +1,5 @@
 export class BTCTransactions {
     // maybe do some validation on the transaction format
     transaction: string;
-    confirmations: 4
+    confirmations: number
 }
